--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "node index.js",
+    "start": "node index.js",
     "dev": "node src/index.js"
   },
   "author": "Jorge",
