--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "node src/index.js",
     "dev": "node src/index.js"
   },
   "author": "Jorge",
