--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://JORGE:dnwEOBcWfowp3ti3@users.eex4ctv.mongodb.net/?retryWrites=true&w=majority&appName=Users
 PORT=3001
+CLOUD_NAME= detpaq6iw
+CLOUD_API_KEY= 464184677836553
+CLOUD_API_SECRET= eevuQJhWNxyqAUGu_E4hhlumveo
